<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context="com.sandraprog.popularmovies2.DetailActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/iv_poster"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_alignParentTop="true"
            android:adjustViewBounds="true"
            android:contentDescription="@string/movie_poster_text"
            android:scaleType="centerCrop"
            android:src="@mipmap/ic_launcher" />
        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/iv_poster"
            android:layout_centerHorizontal="true"
            android:layout_margin="@dimen/text_margin"
            android:text="TextView"
            android:textSize="@dimen/title_text_size"
            android:textStyle="bold" />

        <GridLayout
            android:id="@+id/grid_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_title"
            android:layout_margin="@dimen/text_margin"
            android:columnCount="2">

            <Button
                android:id="@+id/favorite_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_columnSpan="2"
                android:text="Mark as favorite"
                android:drawableLeft="@mipmap/ic_launcher_round"
                />
            <TextView
                android:id="@+id/tv_date_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right|clip_horizontal"
                android:layout_margin="@dimen/cell_margin"
                android:text="@string/release_date_text"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/cell_margin"
                android:text="@string/release_date_text" />

            <TextView
                android:id="@+id/tv_vote_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/cell_margin"
                android:text="@string/vote_average_text"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_vote"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/cell_margin"
                android:text="@string/vote_average_text" />


            <TextView
                android:id="@+id/tv_overview"
                android:layout_height="wrap_content"
                android:layout_columnSpan="2"
                android:layout_margin="@dimen/cell_margin"
                android:shrinkColumns="0, true"
                android:text="@string/overview_text" />
        </GridLayout>

        <TextView
            android:id="@+id/trailers_text"
            android:textStyle="bold"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_margin="@dimen/text_margin"
            android:text="@string/trailers_text"
            android:layout_below="@id/grid_layout"
            android:textSize="@dimen/item_text_size"/>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recycler_trailers"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/trailers_text">

        </android.support.v7.widget.RecyclerView>

        <TextView
            android:id="@+id/reviews_text"
            android:textStyle="bold"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_margin="@dimen/text_margin"
            android:text="@string/reviews_text"
            android:layout_below="@id/recycler_trailers"
            android:textSize="@dimen/item_text_size"
            />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recycler_reviews"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/reviews_text">

        </android.support.v7.widget.RecyclerView>
    </RelativeLayout>

</ScrollView>
